@@ -1147,11 +1147,11 @@ swarm_directory_get_language_independent_class_name  (id object)
 {
 #ifdef HAVE_JDK
   jobject jobj;
-  // if this is a JavaProxy, return the Java-side classname
-  if ((jobj = SD_FINDJAVA(jniEnv, object)))
+
+  if ((jobj = SD_FINDJAVA (jniEnv, object)))
     {
       jclass jcls = (*jniEnv)->GetObjectClass (jniEnv, jobj);
-      return (get_class_name(jniEnv, jcls));
+      return get_class_name (jniEnv, jcls);
     }
   else 
     return (const char *) (getClass (object))->name;      
