@@ -1,3 +1,8 @@
+1999-08-12  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>
+
+	* directory.m (swarm_directory_get_language_independent_class_name): 
+	Referenced object needn't be a proxy.
+
 1999-08-12  Alex Lancaster  <alex@santafe.edu>
 
 	* DefObject.m: Move include of directory.h, outside HAVE_JDK,
